# DataInspector

./: .env  CMakeLists.txt  DISocket.hpp  Dockerfile  GlobalExceptionHandler.h  HTTPUtil.h  Proxy.cxx  README.md  docker-compose.yaml  looped_task.hpp
api/: AnalysesEndpoint.cpp  AnalysisEndpoint.cpp  BuildsEndpoint.cpp  CMakeLists.txt  DataEndpoint.cxx  DevicesEndpoint.cxx  RunsEndpoint.cpp
api/include/api/: AnalysesEndpoint.h  AnalysisEndpoint.h  BuildsEndpoint.h  DataEndpoint.h  DevicesEndpoint.h  RunsEndpoint.h
api/include/api/response/: AnalysisBuildStatus.h  AnalysisId.h  AnalysisList.h  BuildId.h  BuildList.h  DatasetList.h  DeviceList.h  MessageHeaderList.h  MessageList.h  RunId.h  RunsList.h  WorkflowList.h
builder/: Dockerfile
domain/: AnalysesDetector.cpp  AnalysesService.cpp  AnalysisService.cpp  BuildDetector.cpp  BuildManager.cpp  BuildService.cpp  CMakeLists.txt  DevicesService.cpp  MessageService.cpp  RunManager.cpp  RunsService.cpp  SocketManagerService.cpp
domain/include/domain/: AnalysesDetector.h  AnalysesService.h  AnalysisRepository.h  AnalysisService.h  BuildDetector.h  BuildManager.h  BuildRepository.h  BuildService.h  DIMessages.h  DISocket.hpp  DevicesRepository.h  DevicesService.h  Mappers.h  MessageRepository.h  MessageService.h  RunManager.h  RunRepository.h  RunsService.h  SocketManagerService.h
domain/include/domain/model/: Analysis.h  Build.h  Device.h  Message.h  Run.h  Stats.h  StatsRequest.h
infrastructure/: CMakeLists.txt  InMemoryAnalysisRepository.cpp  InMemoryDevicesRepository.cpp  InMemoryMessageRepository.cpp  InMemoryRunRepository.cpp  MongoAnalysisRepository.cpp  MongoBuildRepository.cpp  MongoDevicesRepository.cpp  MongoMessageRepository.cpp  MongoRunRepository.cpp
infrastructure/include/infrastructure/: InMemoryAnalysisRepository.h  InMemoryDevicesRepository.h  InMemoryMessageRepository.h  InMemoryMessageRpository.h  InMemoryRunRepository.h  MongoAnalysisRepository.h  MongoBuildRepository.h  MongoDevicesRepository.h  MongoMessageRepository.h  MongoOperation.h  MongoRunRepository.h
o2-local-builds/: o2-di-cleaned.build
scripts/: buildWorkflow  executeWorkflow
serialization/: ArrowSerialization.cpp  CMakeLists.txt  RootSerialization.cpp
serialization/include/serialization/: ArrowSerialization.h  JsonSerialization.h  RootSerialization.h
utils/: CMakeLists.txt  ThreadPool.cpp
utils/include/utils/: Base64.h  ThreadPool.h
